# hsat

./: .travis.yml  LICENSE  README.md  hsat.cabal  sat.cabal
c-sources/: config.h  ipasirpicosatglue.c  picosat.c
src/: SAT.hs
src/SAT/: All.hs  IntSolver.hs  PicoSAT.hs  Solver.hs  Types.hs  Util.hs  Variables.hs
src/SAT/IntSolver/: Base.hs  IPASIR.hs  TH.hs  Util.hs
src/SAT/IntSolver/IPASIR/: Generic.hs  TH.hs
src/SAT/Types/: LBool.hs  Lit.hs
test/: Spec.hs  TestUtils.hs
test/Spec/SAT/: IntSolver.hs  Types.hs
test/Spec/SAT/IntSolver/IPASIR/: TH.hs
test/Spec/SAT/Types/: LBool.hs  Lit.hs
