name:                hsat
Description:         Bindings for SAT solvers.
version:             0.1.0.0
homepage:            https://github.com/hsat/hsat#readme
license:             MIT
license-file:        LICENSE
author:              Philipp Dargel
maintainer:          chisui@tzi.de
copyright:           2017 Philipp Dargel
category:            Logic
build-type:          Simple
extra-source-files:  README.md
                   , LICENSE
                   , stack.yaml
                   , c-sources/config.h
                   , c-sources/ipasir.h
                   , c-sources/picosat.h
                   , c-sources/picosat.c
                   , c-sources/version.c
                   , c-sources/ipasirpicosatglue.c
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  Include-dirs:        c-sources
  c-sources:           c-sources/picosat.c
                       c-sources/version.c
                       c-sources/ipasirpicosatglue.c
  ghc-options:         -Wall -O3 -optc=-Wall -optc=-Wextra -optc=-DNDEBUG -optc=-O3
  hs-source-dirs:      src
  build-depends:       base >= 4.9 && < 5
                     , comonad
                     , containers
                     , transformers
                     , vector
                     , split
                     , template-haskell
                     , boxes
  exposed-modules:     SAT.All
                     , SAT.Solver
                     , SAT.IntSolver
                     , SAT.IntSolver.IPASIR
                     , SAT.Types
                     , SAT.Util
                     , SAT.Variables
                     , SAT.PicoSAT
  other-modules:       SAT.Types.LBool
                     , SAT.Types.Lit
                     , SAT.IntSolver.IPASIR.Generic
                     , SAT.IntSolver.Base
                     , SAT.IntSolver.Util

test-suite hsat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       Spec.SAT.IntSolver
                     , Spec.SAT.Types.LBool
                     , Spec.SAT.Types.Lit
                     , TestUtils
  build-depends:       base
                     , hsat
                     , containers
                     , transformers
                     , comonad
                     , vector
                     
                     , tasty
                     , tasty-smallcheck
                     , smallcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/chisui/sat
