name:                sat
version:             0.1.0.0
homepage:            https://github.com/githubuser/sat#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Dargel
maintainer:          chisui@tzi.de
copyright:           2017 Philipp Dargel
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , containers
                     , transformers
                     , vector
                     , split
                     , template-haskell
                     , boxes
  exposed-modules:     SAT
                     , SAT.Solver
                     , SAT.IntSolver
                     , SAT.Types
                     , SAT.Util
                     , SAT.Variables
                     , SAT.IntSolver.IPASIR.TH
  other-modules:       SAT.Types.LBool
                     , SAT.Types.Lit

test-suite sat-test
  extra-libraries:     ipasircryptominisat5
                     , cryptominisat5
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       Spec.SAT.IntSolver.IPASIR.TH
  build-depends:       base
                     , sat
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/chisui/sat
